UCF-APR2.4/ftr main/force-app/main/default/objects/ContractCreationConfig__mdt/ContractCreationConfig__mdt.object-meta.xml
<CustomObject>
    <label>Contract Creation Config</label>
    <pluralLabel>Contract Creation Configs</pluralLabel>
</CustomObject>