UCF-APR2.4/ftr main/force-app/main/default/objects/ContractCreationConfig__mdt/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>