UCF-APR2.4/ftr main/force-app/main/default/objects/ContractCreationConfig__mdt/fields/IsBundle__c.field-meta.xml
<CustomField>
    <fullName>IsBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bundle?</label>
    <type>Checkbox</type>
</CustomField>