UCF-APR2.4/ftr main/force-app/main/default/objects/ContractCreationConfig__mdt/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <inlineHelpText>If the contract contains any of these products, create a contract with the given Agreement Type, Schedule Type, and line items with the given Product Family</inlineHelpText>
    <label>Products</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>