UCF-APR2.4/ftr main/force-app/main/default/objects/ContractCreationConfig__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Products__c</columns>
    <columns>Schedule_Type__c</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Product_Family__c</columns>
    <columns>IsBundle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>